map view changes

--- a/views/maps-view.hbs
+++ b/views/maps-view.hbs
@@ -285,8 +285,8 @@
 						<span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu">
-						<li class="active" data-value=""><a href="#">Basic</a></li>
-						<li data-value="Clustered"><a href="#">Clustered</a></li>
+						<li class="" data-value=""><a href="#">Basic</a></li>
+						<li class="active" data-value="Clustered"><a href="#">Clustered</a></li>
 					</ul>
 				</div>
 				<select id="inspectionid-filter" multiple>
