--- a/views/jobs-assigned.hbs
+++ b/views/jobs-assigned.hbs
@@ -24,6 +24,8 @@
 	<script src='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.js'></script>
 	<link href='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.css' rel='stylesheet' />
 	<link rel="stylesheet" type="text/css" href="http://www.jqueryscript.net/demo/Lightweight-Interactive-Pagination-Plugin-jQuery-jqPagination/css/jqpagination.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap-datetimepicker.min.css">
+
 </head>
 <body>
 	<div class="overflow-scroll">
@@ -160,21 +162,23 @@
 						<table class="table">
 							<thead>
 								<tr>
-									<th data-sort="string" data-type="name">siteId <i class="fa fa-sort" aria-hidden="true"></i> </th>
-									<th data-sort="string" data-type="status">Location <i class="fa fa-sort" aria-hidden="true"></i> </th>
-									<th data-sort="string">GeoCodedLocation <i class="fa fa-sort" aria-hidden="true"></th>
-									<th data-sort="string">State <i class="fa fa-sort" aria-hidden="true"></th>
-									<th data-sort="string">Postal Code <i class="fa fa-sort" aria-hidden="true"></th>
+									<th data-type="siteid" data-sort="string">Site Id<i class="fa fa-sort" aria-hidden="true"></th>
+									<th data-type="location" data-sort="string">Location<i class="fa fa-sort" aria-hidden="true"></th>
+									<th data-type="state" data-sort="string">Postal Code<i class="fa fa-sort" aria-hidden="true"></th>
+									<th data-type="PostalCode" data-sort="string">Postal Code<i class="fa fa-sort" aria-hidden="true"></th>
+									<th data-type="latlon" data-sort="string">GeoCoded Location<i class="fa fa-sort" aria-hidden="true"></th>
 									<th>Location on MAP</th>
-									<th data-sort="string">Start Date <i class="fa fa-sort" aria-hidden="true"></i></th>
-									<th data-sort="string">End Date <i class="fa fa-sort" aria-hidden="true"></i></th>
+									<th data-type="startdate" data-sort="string">Start Date<i class="fa fa-sort" aria-hidden="true"></th>
+									<th data-type="enddate" data-sort="string">End Date<i class="fa fa-sort" aria-hidden="true"></th>
+									<th data-type="Assignee" data-sort="string">Assignee<i class="fa fa-sort" aria-hidden="true"></th>
+									
 								</tr>
 							</thead>
 							<tbody id="job-list">
 							</tbody>
 						</table>
 					</div>
-					<nav class="text-center">
+					<nav class="text-center pagination-section">
 						<div class="limitData pull-right">
 							<label for="pagination-limit">Pagination Limit</label>
 							<select class="form-control" id="pagination-limit">
@@ -223,20 +227,32 @@
 	</div>
 </div>
 
-<script type="text/template" id="job-template">
-	<tr data-type="<%=jobtype%>">
-		<td class="siteId"><%=siteId%></td>
-		<td><%=location%></td>
-		<td class="siteId"><%=siteId%></td>
-		<td><%=state%></td>
-		<td><%=PostalCode%></td>
-		<td class="view-map" data-latitude="<%=latitude%>" data-longitude="<%=longitude%>" data-auditorlatitude="<%=auditorlatitude%>" data-auditorlongitude="<%=auditorlongitude%>">
-			<i class="fa fa-location-arrow" aria-hidden="true"></i>
-		</td>
-		<td class="coloumn"><%=completeddate%></td>
-		<td class="coloumn"><%=completeddate%></td>
-	</tr>
-</script>
+	<script type="text/template" id="job-template">
+		<tr class="job-parent" data-id="<%=jobid%>">
+			<td class="job-element" contenteditable="true" data-type="siteid"><%=siteId%></td>
+			<td class="job-element" contenteditable="true" data-type="location"><%=location%></td>
+			<td class="job-element" contenteditable="true" data-type="state"><%=state%></td>
+			<td class="job-element" contenteditable="true" data-type="PostalCode"><%=PostalCode%></td>
+			<td class="job-element" data-type="latlon"><%=latitude%>,<%=longitude%></td>
+			<td class="view-map">
+				<i class="fa fa-location-arrow" aria-hidden="true"></i>
+			</td>
+			<td data-type="startdate">
+				<div class="input-append date form_datetime1" id="start-date-time-picker<%=i%>">
+					<input size="16" type="text" class="" value="<%=startdate%>" readonly>
+					<span class="add-on"><i class="icon-th"></i></span>
+				</div>
+			</td>
+			<td data-type="enddate">
+				<div class="input-append date form_datetime2" id="end-date-time-picker<%=i%>">
+					<input size="16" type="text" class="" value="<%=enddate%>" readonly>
+					<span class="add-on"><i class="icon-th"></i></span>
+				</div>
+			</td>
+			<td class="Assignee" data-id="<%=userid%>"><%=name%></td>
+
+		</tr>
+	</script>
 <script type="text/template" id="pagination-template">
 	
 </script>
@@ -251,6 +267,7 @@
 <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyC7lEhWOW6t8D5yWL0FwnL_Wa7QgyVNe7o&libraries=places'></script>
 <script src="js/vendor/location.picker.min.js"></script>
 <script src="http://www.jqueryscript.net/demo/Lightweight-Interactive-Pagination-Plugin-jQuery-jqPagination/js/jquery.jqpagination.js"></script>
+	<script src="js/vendor/bootstrap.datepicker.js"></script>
 <script src="js/api_scripts/jobs-assigned.js"></script>
 <script src="js/api_scripts/user_data.js"></script>
 
