--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -54,6 +54,7 @@
 							<input type="password" class="form-control" placeholder="Enter your password" name="password" id="password-field">
 						</div>
 						<div class="error-display"></div>
+						<a href="#" class="resend-verification hide">resend verification code</a>
 						<button class="btn btn-default signin-btn">SIGN IN</button>
 						<span class="forget-password">
 							<a href="/forgot-password">Forgot Password?</a>
@@ -64,7 +65,6 @@
 		</div>
 	</div>
 	<script type="text/javascript">
-	console.log( "{{title}}")
 	</script>
 	<script type="text/javascript" src="http://c3173.r73.cf2.rackcdn.com/Kumulos.min.js"></script>
 
