--- a/views/verify-email.hbs
+++ b/views/verify-email.hbs
@@ -2,7 +2,7 @@
 <html class="no-js">
 <head>
 	<meta charset="utf-8">
-	<title>Forget Password</title>
+	<title>Signin</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -23,7 +23,7 @@
 					<img src="images/banner-signin.png">
 				</div>
 				<div class="s-bannerDesc">
-					<h5>OUT OF HOME (OOH) SITE AUDITS</h5>
+					<h5>Email Verification</h5>
 					<p> 
 						To replace paper based audits with android and iOS apps that automatically feeds audit results into the database
 					</p>
@@ -36,37 +36,36 @@
 					<img src="images/logo.png">
 				</div>
 				<div class="s-getstarted pull-right">
-					<label>Don’t have an account?</label>
-					<a class="btn btn-default register-btn" href="/">GET STARTED</a>
+					<label>Don’t have an account? <span>-  It’s Free</span></label>
+					<a class="btn btn-default register-btn" href="/signup">GET STARTED</a>
 				</div>
 				<div class="s-form">
-					<div class="s-welcome">
-						<h5>Forgot your password?</h5>
-						<label>
-							Enter your email address below and we’ll get you back on track.
-						</label>
+					<div class="s-welcome hide" id="email-verification-success">
+						<h5>Email id has been verified successfully</h5>
+						<label></label>
 					</div>
-					<form id="forgot-password-form">
-						<div class="form-group">
-							<label for="forgot-email">Email Address</label>
-							<input type="email" class="form-control" name="email" id="email-field" placeholder="Enter your email address">
-						</div>
-						<div class="error-display"></div>
-						<button class="btn btn-default signin-btn">REQUEST RESET LINK</button>
-						<label class="back-to text-center">
-							<a href="/">BACK TO SIGN IN</a>
-						</label>
-					</form>
+					<div class="s-welcome hide" id="email-verification-error">
+						<h5>Invalid Token</h5>
+						<label><a href="/resend-email-verification">resend mail</a></label>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript">
+	console.log( "{{title}}")
+	</script>
+	<script type="text/javascript" src="http://c3173.r73.cf2.rackcdn.com/Kumulos.min.js"></script>
 
 	<script src="js/vendor/jquery-3.1.0.min.js"></script>
 	<script src="js/vendor/bootstrap.min.js"></script>
-	<script src="js/scripts.js"></script>
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
-	<script type="text/javascript" src="http://c3173.r73.cf2.rackcdn.com/Kumulos.min.js"></script>
-	<script src="js/api_scripts/forgot-password.js"></script>
-</body>
-</html>
+	<script type="text/javascript" src="js/vendor/jquery.validate.min.js"></script>
+	<script src="js/api_scripts/verify-email.js"></script>
+
+			<!-- <script type="text/javascript">
+				var pagename = 'signin';
+			</script> -->
+			<script src="js/scripts.js"></script>
+			
+	</body>
+	</html>
