--- a/views/verify-email.hbs
+++ b/views/verify-email.hbs
@@ -46,7 +46,7 @@
 					</div>
 					<div class="s-welcome hide" id="email-verification-error">
 						<h5>Invalid Token</h5>
-						<label><a href="/resend-email-verification">resend mail</a></label>
+						<label><a class="resend-verification">resend mail</a></label>
 					</div>
 				</div>
 			</div>
